--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
-RewriteCond $1 !^(index\.php|application|media|robots\.txt)
+RewriteCond $1 !^(index\.php|application|media|docs|robots\.txt)
 RewriteRule ^(.*)$ /ci-cms2/index.php/$1 [L]
