fixing a bit .hgignore

--- a/.hgignore
+++ b/.hgignore
@@ -1,6 +1,6 @@
-application/config/config.php
-application/config/database.php
-application/modules/helpdoc
+media/*
+application/config/*
+application/config/*
 application/logs/*
 ci-cms/*
 docs/*
